@@ -2634,7 +2634,8 @@ See also @code{mpfr_lgamma}.
 
 @deftypefun int mpfr_lgamma (mpfr_t @var{rop}, int *@var{signp}, const mpfr_t @var{op}, mpfr_rnd_t @var{rnd})
 Set @var{rop} to the value of the logarithm of the absolute value of the
-Gamma function on @var{op}, rounded in the direction @var{rnd}. The sign
+Gamma function on @var{op}, rounded in the direction @var{rnd}.
+If @var{signp} is not @code{NULL}, the sign
 (1 or @minus{}1) of Gamma(@var{op}) is returned in the object pointed to
 by @var{signp}.
 When @var{op} is 1 or 2, set @var{rop} to @mm{+}0 (in all rounding modes).
